--- a/app_movil/pubspec.yaml
+++ b/app_movil/pubspec.yaml
@@ -19,6 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_map:
+  geolocator: '^5.1.3'
+  http: '^0.12.0+2'
+  rxdart: '^0.22.0'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
