--- a/app_movil/android/local.properties
+++ b/app_movil/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=D:\\Android\\Sdk
-flutter.sdk=C:\\Flutter\\flutter
+sdk.dir=C:\\Users\\VJ\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\Users\\VJ\\Documents\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
